# win32-libuv

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.manifest  win32uv.c  win32uv.h  win32uv_timers.c  win32uv_timers.h  win32uv_window.c  win32uv_window.h
